# pandora

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Caddy.dockerfile  Poetry.dockerfile
pandora/: main.py
pandora/api/errors/: error_models.py
pandora/api/models/: query_models.py
pandora/api/routers/: auth_router.py  document_router.py  entry_router.py  query_router.py
pandora/helpers/: chroma.py  database.py  dotenv.py  poetry.py  users.py
pandora/schemas/: user_schemas.py
